--- a/Index.html
+++ b/Index.html
@@ -73,8 +73,7 @@
         que no está en tu máquina local.
         Es la conexión entre tu local y la nube,
         entre git y github.
-        Al crear un nuevo repositorio siempre se
-        crea un remote default llamado “origin”.</p>
+        Al crear un nuevo repositorio siempre se crea un remote default llamado “origin”.</p>
     </article>
       <article class="termino">
         <h2>Selectores</h2>
